# crud_api_fastapi

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py  project_database.db
src/crud_api/: __main__.py  main.py  models.py  test.py  utils.py
tests/unit_test/: test_models.py
