[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crud_api"
version = "0.1.0"
authors = [  
  { name="José F. Aldana Martín", email="jfaldanam@uma.es" },
]
description = "Validation and execution of AI functions"
readme = "README.md"

dependencies = [
    "fastapi[standard]>=0.103.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/crud_api"]    